--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -2,6 +2,7 @@ core:
     site:
         title: Nos Amis les Oiseaux
         logo: Nos Amis les Oiseaux
+
     footer:
         left_links:
             search:
@@ -24,4 +25,7 @@ core:
             agency:
                 link: WebAgency
                 title: Agence WebAgency
+
+    login:
+        title: Connexion
 
