Création d'une méthode de récupération personnelle dans le Repository et ajout d'une function ajax pour la recherche en instantané

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -2,6 +2,9 @@ core:
     site:
         title: Nos Amis les Oiseaux
         logo: Nos Amis les Oiseaux
+    find:
+        input_find: Tapez le nom de l'oiseau
+        button_find: Rechercher
     footer:
         left_links:
             search:
