--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -45,3 +45,12 @@ core:
 
     register:
         title: Inscription
+
+    validation:
+        user:
+            firstname:
+                min: Votre prénom ne peut contenir moins de 2 caractères.
+                max: Votre prénom ne peut contenir plus de 255 caractères.
+            surname:
+                min: Votre nom ne peut contenir moins de 2 caractères.
+                max: Votre nom ne peut contenir plus de 255 caractères.
