--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -98,8 +98,10 @@ core:
     validation:
         user:
             firstname:
+                blank: Veuillez saisir votre prénom.
                 min: Votre prénom ne peut contenir moins de 2 caractères.
                 max: Votre prénom ne peut contenir plus de 255 caractères.
             surname:
+                blank: Veuillez saisir votre nom.
                 min: Votre nom ne peut contenir moins de 2 caractères.
                 max: Votre nom ne peut contenir plus de 255 caractères.
