Design du menu secondaire vertical terminé

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -28,6 +28,13 @@ core:
         login: Se connecter
         logout: Se déconnecter
 
+    second-menu:
+        observation: Laisser une observation
+        search: Rechercher un oiseau
+        contact: Nous contacter
+        register: S'inscrire
+        login: Se connecter
+
     footer:
         left_links:
             search:
